--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Vite + React</title>
+    <title>IEPQ - International Entity for Peace & Quality</title>
   </head>
   <body>
     <div id="root"></div>
